@@ -2,6 +2,10 @@ Cascading Change Log
 
 unreleased
 
+  Changed MapReduce planner to force an intermediate file between branches with Hadoop incompatible source Taps
+  on joins/merges. If the taps are compatible (have same Scheme), all branches will be processed in same Mapper
+  before the c.p.Group. 
+
   Added merge capabilities in c.p.GroupBy. This allows multiple input branches to be grouped as if a single stream.
 
   Fixed bug in c.t.TapCollector where writing to a Sequence file threw a NPE.
